initial experiments with selectable score. WIP. Outstanding issues: 1. Update SelectableScore to use DOM MutationObservers. 2. Remove invisible divs infront of score in CLARA as they block selection. 3. Adjust CSS to fix score layout by passing correct vrvOptions object

--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,10 @@ body {
   font-family: sans-serif;
 }
 
+.selected {
+  fill: rgb(35, 144, 194) !important;
+}
+
 .videoWrapper { 
   max-width:945px;
   margin-left:20px;
